--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
 
-<app-todo></app-todo>
+<!-- <app-todo></app-todo>
 
 <app-student></app-student>
+ -->
 
+ <app-todo-dashboard></app-todo-dashboard>
+ <app-student-dashboard></app-student-dashboard>
+
+ <app-post-dashboard></app-post-dashboard>
+
+ <app-imgcard-dashboard></app-imgcard-dashboard>
